--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "helmet": "^3.21.3",
     "jsdom": "^16.2.0",
     "mocha": "^7.1.0",
-    "socket.io": "^2.3.0",
-    "socket.io-client": "^2.3.0"
+    "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5"
   },
   "license": "MIT"
 }
