--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.21.3",
+    "helmet": "^7.1.0",
     "jsdom": "^16.2.0",
     "mocha": "^7.1.0",
+    "nocache": "^4.0.0",
     "nodemon": "^3.1.4",
     "socket.io": "^4.7.5",
     "socket.io-client": "^4.7.5"
